# cryptifier

./: Cargo.toml
src/: commands.rs  decrypt.rs  encrypt.rs  generate.rs  main.rs
